# kcrypto

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/kcrypto-conventions/: SKILL.md
docs/: mkdocs.yml
docs/dev/: architecture.md  module-progress-cheatsheet.md
docs/user/rsa/: manger-attack.md
kcrypto/: __init__.py  _logger.py  _result.py
kcrypto/analyze/: __init__.py  ecc.py  rsa.py
kcrypto/attacks/: __init__.py
kcrypto/attacks/dlog/: __init__.py
kcrypto/attacks/ecc/: __init__.py
kcrypto/attacks/factoring/: __init__.py  ecm.py  msieve.py  pollard_rho.py  smart.py  yafu.py
kcrypto/attacks/hash/: __init__.py
kcrypto/attacks/isogeny/: __init__.py
kcrypto/attacks/lattice/: __init__.py  babai_algorithm.py  bkz.py  bkz_reduction.py  cvp_babai.py  cvp_enum.py  cvp_kannan.py  kannan_embedding.py  lll.py  lll_reduction.py
kcrypto/attacks/rsa/: __init__.py  bleichenbacher.py  boneh_durfee.py  coppersmith.py  fermat.py  fermat_factorization.py  franklin_reiter.py  hastad.py  know_d_factorization.py  known_phi_factorization.py  manger_attack.py  wiener.py  wiener_attack.py
kcrypto/attacks/secret_sharing/: __init__.py
kcrypto/attacks/signatures/: __init__.py
kcrypto/attacks/symmetric/: __init__.py
kcrypto/bridges/: __init__.py  pwn.py  sage.py  z3.py
kcrypto/core/: __init__.py  contracts.py  encoding.py  factor.py  logger.py  math.py
tests/: conftest.py
tests/attacks/lattice/: __init__.py  _fixture_utils.py  test_babai.py  test_bkz.py  test_cvp_babai.py  (+4 more)
tests/core/: test_bridges.py  test_contracts.py  test_logger.py
(+11 files in other folders)
