[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "kcrypto"
version = "0.1.0"
description = "Crypto CTF and security research toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "kcrypto contributors" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
sage = ["sagemath-standard"]
z3 = ["z3-solver"]
pwn = ["pwntools"]
dev = ["pytest", "hypothesis", "mypy", "mkdocs", "mkdocstrings"]
full = ["kcrypto[sage,z3,pwn]"]
